<resources>
    <string name="app_name">Books Inventory App</string>

    <string name="empty_shelf">Add books on inventory !</string>

    <string name="book_author">Author</string>
    <string name="book_title">Title</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_year">Year</string>
    <string name="book_supplier_email">Supplier email</string>
    <string name="book_supplier">Supplier</string>
    <string name="quantity">Available quantity</string>
    <string name="existing_quantity">Existing quantity</string>
    <string name="quantity_adapter">quantity</string>


    <string name="adjust_quantity">Update quantity with</string>
    <string name="new_order">New order</string>
    <string name="book_price">Price</string>

    <string name="Sale_button">Sale</string>
//Menu strings //
    <string name="Order_by">Order by</string>
    <string name="Insert_dummy">Insert dummy data</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="unknown_title">Unknown title</string>
    <string name="unknown_author">Unknown_author</string>

    <string name="editor_insert_failed">Error with saving book </string>
    <string name="editor_insert_successful">Book saved</string>
    <string name="editor_update_failed">Error with updating book</string>
    <string name="editor_update_successful">Book updated</string>
    <string name="editor_add_book_title">Add new book</string>
    <string name="editor_edit_book_title">Edit a book</string>
    <string name="editor_valid_entries">Please insert more details</string>
    <string name="editor_valid_title">Please insert the book title</string>
    <string name="editor_valid_author">Please insert the book author</string>
    <string name="editor_valid_price">Please insert the book price</string>
    <string name="editor_valid_image">Please insert the book image</string>
    <string name="editor_valid_quantity">Negative quantity</string>
    <string name="editor_valid_book_saved">Save the new book first</string>


    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <string name="quantity_increased">Quantity increased</string>
    <string name="quantity_decreased">Quantity decreased</string>
    <string name="quantity_modify_error">Error updating quantity</string>
    <string name="quantity_zero">Please insert a value</string>




</resources>
